[gd_scene load_steps=10 format=3 uid="uid://cwlfbfcef0p3l"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_3fs8a"]
[ext_resource type="Texture2D" uid="uid://yre8638dq0sa" path="res://assets/sprites/slime_purple.png" id="2_4rlp5"]
[ext_resource type="AudioStream" uid="uid://brermjcwc4ohv" path="res://assets/sounds/die.mp3" id="3_44xyt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_du6ga"]
atlas = ExtResource("2_4rlp5")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ota"]
atlas = ExtResource("2_4rlp5")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ofk"]
atlas = ExtResource("2_4rlp5")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_otir5"]
atlas = ExtResource("2_4rlp5")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ihp0u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_du6ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3ota")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ofk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otir5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqg8o"]
size = Vector2(14, 15)

[node name="slime_red" type="Node2D"]
script = ExtResource("1_3fs8a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ihp0u")
autoplay = "default"
frame = 2
frame_progress = 0.244543

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(13, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-13, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_uqg8o")

[node name="slime_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_44xyt")
volume_db = 3.5
pitch_scale = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
